crates/panache-parser/tests/snapshots/yaml__yaml_suite_SM9W__01.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: SM9W/01
input: ":"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
